Azure/AKS/aks-practice/frontend-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: team-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx:1.21
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: team-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nginx:1.21
        ports:
        - containerPort: 8080
