Azure/AKS/aks-practice/storage-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-pod
  namespace: team-dev
spec:
  containers:
  - name: storage-container
    image: nginx:1.21
    volumeMounts:
    - mountPath: "/data"
      name: data-volume
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: data-pvc
