Azure/AKS/aks-practice/stateful-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful-app
  namespace: team-dev
spec:
  selector:
    app: stateful-app
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None # Headless service
